stop overflow scrolling on #main-content when mobile menu open

--- a/css/responsive/mobile.styl
+++ b/css/responsive/mobile.styl
@@ -175,6 +175,10 @@ menuBackgrounds()
 
 #menus
   width: 100%
+  &.main-menu-active
+    #main-content
+      .menu-column-content
+        overflow: hidden
 
 .menu-column
   float: none
